[package]
name = "runt"
version = "0.2.7"
authors = ["Rachit Nigam <rachit.nigam12@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["testing", "snapshot-testing"]
repository = "https://github.com/rachitnigam/runt"
readme = "README.md"
description = "A lightweight and parallel snapshot testing framework."
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.6"
structopt = "0.3"
difference = "2.0"
futures = "0.3.4"
colored = "1.9.3"
toml = "0.5.6"
glob = "0.3.0"
num_cpus = "1.13"

[dependencies.serde]
version = "1.0.105"
features = ["derive"]

[dependencies.tokio]
version = "0.2"
features = ["rt-threaded", "process", "macros", "fs"]
