[package]
name = "runt"
version = "0.3.1"
authors = ["Rachit Nigam <rachit.nigam12@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["testing", "snapshot-testing"]
repository = "https://github.com/rachitnigam/runt"
readme = "README.md"
description = "A lightweight and parallel snapshot testing framework."
categories = ["development-tools::testing"]

[dependencies]
regex = "1"
structopt = "0.3"
difference = "2"
futures = "0.3.4"
colored = "2"
toml = "0.5"
glob = "0.3.0"
num_cpus = "1.13"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "process", "macros", "fs", "time"]
