[package]
name = "runt"
version = "0.4.0"
authors = ["Rachit Nigam <rachit.nigam12@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["testing", "snapshot-testing"]
repository = "https://github.com/rachitnigam/runt"
readme = "README.md"
description = "A lightweight and parallel snapshot testing framework."
categories = ["development-tools::testing"]

[dependencies]
regex = "1"
difference = "2"
futures = "0.3"
colored = "2"
toml = "0.5"
glob = "0.3"
num_cpus = "1.13"
argh = "0.1"
atty = "0.2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "process", "macros", "fs", "time"]
